# MouseFlow

./: .gitignore  OB_behaviour.ipynb  README.md  analyze_bodycam.py  analyze_facecam.py  behaviour_frequencies.ipynb  generate_face_video.ipynb  imh_cameras.py  init_DLC_noDT.py  mouseflow.py  pyproject.toml
mouseflow/: body_processing.py  face_processing.py  mouseflow.py
mouseflow/utils/: generate_labeled_videos.py  generic.py  testing_optical_flow.py
sample_data/mouseflow/: sample_body1_20190213_145358892_trimDLC_resnet50_MouseBodySep9shuffle1_1030000_meta.pickle  sample_face1_20190624_144148390_trimDLC_resnet50_MouseFaceAug21shuffle1_1030000.h5  sample_face1_20190624_144148390_trimDLC_resnet50_MouseFaceAug21shuffle1_1030000_meta.pickle  sample_face2_20190628_135904092_trimDLC_resnet50_MouseFaceAug21shuffle1_1030000.h5  sample_face2_20190628_135904092_trimDLC_resnet50_MouseFaceAug21shuffle1_1030000_meta.pickle
scratch/: OB_behaviour_old.ipynb  init_DGP_noDT.py  scratch_nb.ipynb
src/mouseflow/: __init__.py  apply_models.py  body_processing.py  face_processing.py  mouseflow.py
src/mouseflow/utils/: __init__.py  frequencies.py  generate_labeled_videos.py  generic.py  handling_markers.py  installation.py  installation_utils.py  motion_processing.py  preprocess_video.py  tensorflow_utils.py
